--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,7 @@ body {
   border-color: white;
 }
 #left-button-js {
+  -webkit-touch-callout: none;
   border: none;
 }
 #button-container {
@@ -23,4 +24,5 @@ body {
 #canvas-js {
   margin: 20px;
   max-width: 100%;
+  max-height: 100%;
 }
